<resources>
    <string name="app_name">Download_Times</string>
    <string name="select_speed">Enter Download Speed:</string>
    <string name="select_size">Enter File Size:</string>
    <string name="duration">Duration:</string>
    <string name="calculate_the_duration">Calculate!</string>
    <string name="enter_the_file_size">File Size</string>
    <string name="enter_download_speed">Download Speed</string>
    <string name="duration_over_a_year_L1">The Duration</string>
    <string name="duration_over_a_year_L2">is over a</string>
    <string name="duration_over_a_year_L3">year long!!</string>
    <string name="str_Hours">Hours</string>
    <string name="str_Minutes">Minutes</string>
    <string name="str_Seconds">Seconds</string>
    <string name="outputHours">outputHours</string>
    <string name="outputMinutes">outputMinutes</string>
    <string name="outputSeconds">outputSeconds</string>

    <string-array name="sizeUnits">
        <item>TB</item>
        <item>GB</item>
        <item>MB</item>
        <item>KB</item>
        <item>B</item>
    </string-array>

    <string-array name="speedUnits">
        <item>TB/s</item>
        <item>GB/s</item>
        <item>MB/s</item>
        <item>KB/s</item>
        <item>B/s</item>
    </string-array>

    <string-array name="speedUnits_Alt">
        <item>Tbps</item>
        <item>Gbps</item>
        <item>Mbps</item>
        <item>Kbps</item>
        <item>bps</item>
    </string-array>
</resources>
